--- a/video_labelling.ipynb
+++ b/video_labelling.ipynb
@@ -38,7 +38,7 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "os.environ[\"API_KEY\"] = \"AIzaSyAWxh0Nqr-k1U2Kb82DXTp5HwEqrN1opvs\"\n"
+        "os.environ[\"API_KEY\"] = \""\n"
       ]
     },
     {
